backend/k8s/overlays/prd/webserver.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oetzit-webserver-deployment
spec:
  template:
    spec:
      containers:
        - name: oetzit
          imagePullPolicy: Always
