backend/k8s/overlays/prd/storage.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oetzit-storage-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kommul.eurac.edu
      http:
        paths:
          - path: /oetzit-storage-api/
            backend:
              serviceName: oetzit-storage-service
              servicePort: 9000
          - path: /oetzit-storage-console/
            backend:
              serviceName: oetzit-storage-service
              servicePort: 9001
